--- a/source/layouts/layout.haml
+++ b/source/layouts/layout.haml
@@ -1,50 +1,30 @@
 !!!
 %html
   %head
-    %meta{charset: 'utf-8'}
-    %title= current_page.data.title || ''
-    %meta{name: 'description', content: ''}
-    %meta{name: 'author', content: ''}
-
-    %link{rel:'shortcut icon', type:'image/x-icon', href:'/favicon.ico'}
-    :plain
-        <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
-        <!--[if lt IE 9]>
-            <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-        <![endif]-->
-
-    %link{href: '/stylesheets/style.css', type: 'text/css', rel: 'stylesheet' }
-
+    %meta{charset: "utf-8"}/
+    %meta{content: "IE=edge;chrome=1", "http-equiv" => "X-UA-Compatible"}/
+    %title
+      Blog Title#{' - ' + current_article.title unless current_article.nil?}
+    = feed_tag :atom, "#{blog.options.prefix.to_s}/feed.xml", title: "Atom Feed"
   %body
-
-    .navbar.navbar-fixed-top.navbar-inverse{role: "navigation"}
-      .container
-        .navbar-header
-          %button.navbar-toggle{"data-target" => ".navbar-collapse", "data-toggle" => "collapse", type: "button"}
-            %span.sr-only Toggle navigation
-            %span.icon-bar
-            %span.icon-bar
-            %span.icon-bar
-          %a.navbar-brand{href: "#"} Island94
-        .collapse.navbar-collapse
-          / %ul.nav.navbar-nav
-          /   %li
-          /     %a{href: "#contact"} Contact
-
-    = partial 'hero'
-
-    .container.body-container
+    #main{role: "main"}
       = yield
-
-    / Placed at the end of the document so the pages load faster
-    %script{type: 'text/javascript', src: 'http://code.jquery.com/jquery.js'}
-    %script{type: 'text/javascript', src: 'javascripts/main.js'}
-
-    :javascript
-      // Google Analytics Code
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-      ga('create', 'UA-870047-7', 'sheldoncalderon.com');
-      ga('send', 'pageview');
+    %aside
+      %h2 Recent Articles
+      %ol
+        - blog.articles[0...10].each do |article|
+          %li
+            = link_to article.title, article
+            %span= article.date.strftime('%b %e')
+      %h2 Tags
+      %ol
+        - blog.tags.each do |tag, articles|
+          %li
+            = link_to tag, tag_path(tag)
+            (#{articles.size})
+      %h2 By Year
+      %ol
+        - blog.articles.group_by {|a| a.date.year }.each do |year, articles|
+          %li
+            = link_to year, blog_year_path(year)
+            (#{articles.size})
