--- a/source/layouts/layout.haml
+++ b/source/layouts/layout.haml
@@ -3,28 +3,14 @@
   %head
     %meta{charset: "utf-8"}/
     %meta{content: "IE=edge;chrome=1", "http-equiv" => "X-UA-Compatible"}/
-    %title
-      Blog Title#{' - ' + current_article.title unless current_article.nil?}
+    %title<
+      Ben Sheldon #{'| ' + data.page.title}
     = feed_tag :atom, "#{blog.options.prefix.to_s}/feed.xml", title: "Atom Feed"
+
+    %meta{content: "width=device-width, initial-scale=1.0", name: "viewport"}
+    = stylesheet_link_tag "application"
+
   %body
-    #main{role: "main"}
-      = yield
-    %aside
-      %h2 Recent Articles
-      %ol
-        - blog.articles[0...10].each do |article|
-          %li
-            = link_to article.title, article
-            %span= article.date.strftime('%b %e')
-      %h2 Tags
-      %ol
-        - blog.tags.each do |tag, articles|
-          %li
-            = link_to tag, tag_path(tag)
-            (#{articles.size})
-      %h2 By Year
-      %ol
-        - blog.articles.group_by {|a| a.date.year }.each do |year, articles|
-          %li
-            = link_to year, blog_year_path(year)
-            (#{articles.size})
+    .row
+      .column
+        = yield
