--- a/source/stylesheets/fonts.css
+++ b/source/stylesheets/fonts.css
@@ -1,43 +1,22 @@
 @font-face {
-    font-family: 'league_gothiccondensed_italic';
-    src: url('/fonts/leaguegothic-condenseditalic-webfont.eot');
-    src: url('/fonts/leaguegothic-condenseditalic-webfont.eot?#iefix') format('embedded-opentype'),
-         url('/fonts/leaguegothic-condenseditalic-webfont.woff') format('woff'),
-         url('/fonts/leaguegothic-condenseditalic-webfont.ttf') format('truetype'),
-         url('/fonts/leaguegothic-condenseditalic-webfont.svg#league_gothiccondensed_italic') format('svg');
+    font-family: 'droid_serifregular';
+    src: url('../fonts/DroidSerif-webfont.eot');
+    src: url('../fonts/DroidSerif-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/DroidSerif-webfont.woff') format('woff'),
+         url('../fonts/DroidSerif-webfont.ttf') format('truetype'),
+         url('../fonts/DroidSerif-webfont.svg#droid_serifregular') format('svg');
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
-    font-family: 'league_gothicCnRg';
-    src: url('/fonts/leaguegothic-condensedregular-webfont.eot');
-    src: url('/fonts/leaguegothic-condensedregular-webfont.eot?#iefix') format('embedded-opentype'),
-         url('/fonts/leaguegothic-condensedregular-webfont.woff') format('woff'),
-         url('/fonts/leaguegothic-condensedregular-webfont.ttf') format('truetype'),
-         url('/fonts/leaguegothic-condensedregular-webfont.svg#league_gothicCnRg') format('svg');
+    font-family: 'open_sansregular';
+    src: url('../fonts/OpenSans-Regular-webfont.eot');
+    src: url('../fonts/OpenSans-Regular-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/OpenSans-Regular-webfont.woff') format('woff'),
+         url('../fonts/OpenSans-Regular-webfont.ttf') format('truetype'),
+         url('../fonts/OpenSans-Regular-webfont.svg#open_sansregular') format('svg');
     font-weight: normal;
     font-style: normal;
 }
 
-@font-face {
-    font-family: 'league_gothicitalic';
-    src: url('/fonts/leaguegothic-italic-webfont.eot');
-    src: url('/fonts/leaguegothic-italic-webfont.eot?#iefix') format('embedded-opentype'),
-         url('/fonts/leaguegothic-italic-webfont.woff') format('woff'),
-         url('/fonts/leaguegothic-italic-webfont.ttf') format('truetype'),
-         url('/fonts/leaguegothic-italic-webfont.svg#league_gothicitalic') format('svg');
-    font-weight: normal;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'league_gothicregular';
-    src: url('/fonts/leaguegothic-regular-webfont.eot');
-    src: url('/fonts/leaguegothic-regular-webfont.eot?#iefix') format('embedded-opentype'),
-         url('/fonts/leaguegothic-regular-webfont.woff') format('woff'),
-         url('/fonts/leaguegothic-regular-webfont.ttf') format('truetype'),
-         url('/fonts/leaguegothic-regular-webfont.svg#league_gothicregular') format('svg');
-    font-weight: normal;
-    font-style: normal;
-}
