--- a/source/layouts/layout.haml
+++ b/source/layouts/layout.haml
@@ -4,13 +4,19 @@
     %meta{charset: "utf-8"}/
     %meta{content: "IE=edge;chrome=1", "http-equiv" => "X-UA-Compatible"}/
     %title<
-      Ben Sheldon #{'| ' + data.page.title}
+      Island 94 #{'| ' + data.page.title}
     = feed_tag :atom, "#{blog.options.prefix.to_s}/feed.xml", title: "Atom Feed"
 
     %meta{content: "width=device-width, initial-scale=1.0", name: "viewport"}
     = stylesheet_link_tag "application"
 
   %body
+    %nav
+      .row
+        .column
+          %h1#logo
+            %span.site-name Island 94
+            = link_to image_tag('island-logo.png', alt: "Island 94", title: "Island 94"), '/'
     .row
       .column
         = yield
