--- a/source/layouts/layout.haml
+++ b/source/layouts/layout.haml
@@ -4,7 +4,7 @@
     %meta{charset: "utf-8"}/
     %meta{content: "IE=edge;chrome=1", "http-equiv" => "X-UA-Compatible"}/
     %title<
-      Island 94 #{'| ' + data.page.title}
+      Island 94 #{"| #{data.page.title if data.page.title}"}
     = feed_tag :atom, "#{blog.options.prefix.to_s}/feed.xml", title: "Atom Feed"
 
     %meta{content: "width=device-width, initial-scale=1.0", name: "viewport"}
