--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -13,7 +13,14 @@ per_page: 10
           %input.search{:name => "q", :placeholder => "Search (via Google)", :results => "0", :type => "text"}
 
   .row
-    .medium-6.columns
+    .medium-6.medium-push-6.columns
+      %h2 Newest articles
+      %ol
+        - blog.articles[0...5].each do |article|
+          %li
+            %a{:href => article.url}
+              = article.title
+    .medium-6.medium-pull-6.columns
       %h2 Popular articles
       %ol
         %li= link_to "How to write a cover letter for a job application"
@@ -21,10 +28,3 @@ per_page: 10
         %li= link_to  "Stages of team development"
         %li= link_to  "Sdding class to wordpress linked images"
         %li= link_to  "A gentle conceptual introduction to node js"
-    .medium-6.columns
-      %h2 Newest articles
-      %ol
-        - blog.articles[0...5].each do |article|
-          %li
-            %a{:href => article.url}
-              = article.title
