--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -23,8 +23,7 @@ per_page: 10
     .medium-6.medium-pull-6.columns
       %h2 Popular articles
       %ol
-        %li= link_to "How to write a cover letter for a job application"
-        %li= link_to  "Setting up octave and gnuplot on osx"
-        %li= link_to  "Stages of team development"
-        %li= link_to  "Sdding class to wordpress linked images"
-        %li= link_to  "A gentle conceptual introduction to node js"
+        - data.popular_articles[0...5].map{|title| blog.articles.find{|a| a.title.downcase == title.downcase }}.compact.each do |article|
+          %li
+            %a{:href => article.url}
+              = article.title
