convert from foundation to bootstrap

--- a/source/assets/stylesheets/sections/_base.sass
+++ b/source/assets/stylesheets/sections/_base.sass
@@ -1,10 +1,8 @@
-
-
 body
   font-family: 'droid_serifregular'
 
   h1,h2,h3
     font-family: 'open_sansregular'
 
-.row
-  max-width: 800px
+  .container
+    max-width: 700px
