--- a/source/layouts/article.haml
+++ b/source/layouts/article.haml
@@ -1,36 +1,33 @@
-- wrap_layout :layout do
-  .row
-    .column
-      %article.article
-        %header
-          %h1
-            %a{:href => current_article.url}
-              = current_article.title
-          %p
-            Authored on
-            %time{pubdate: '', datetime: current_article.date.strftime('%Y-%m-%d')}
-              = current_article.date.strftime('%B %e, %Y')
-        .row
-          .column
-            = yield
-        %nav.row
-          .small-6.columns
-            - if current_article.next_article
-              = link_to "← Next: #{current_article.next_article.title}", current_article.next_article
-          .small-6.columns.text-right
-            - if current_article.previous_article
-              = link_to "Previously: #{current_article.previous_article.title} →", current_article.previous_article
-        %footer
-          #disqus_thread
-          :javascript
-            var disqus_shortname = 'island94';
-  
-            (function() {
-              var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-              dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
-              (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-            })();
-          %noscript
-            Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-          :plain
-            <a href="http://disqus.com" class="dsq-brlink">blog comments powered by <span class="logo-disqus">Disqus</span></a>
+= wrap_layout :layout do
+  %article.article.col-xs-12
+    %header
+      %h1
+        %a{:href => current_article.url}
+          = current_article.title
+      %p
+        Authored on
+        %time{pubdate: '', datetime: current_article.date.strftime('%Y-%m-%d')}
+          = current_article.date.strftime('%B %e, %Y')
+    .row
+      = yield
+    %nav.row
+      .col-sm-6
+        - if current_article.next_article
+          = link_to "← Next: #{current_article.next_article.title}", current_article.next_article
+      .col-sm-6.text-right
+        - if current_article.previous_article
+          = link_to "Previously: #{current_article.previous_article.title} →", current_article.previous_article
+    %footer
+      #disqus_thread
+      :javascript
+        var disqus_shortname = 'island94';
+
+        (function() {
+          var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+          dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+          (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+        })();
+      %noscript
+        Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+      :plain
+        <a href="http://disqus.com" class="dsq-brlink">blog comments powered by <span class="logo-disqus">Disqus</span></a>
