--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -6,21 +6,20 @@ per_page: 10
 
 %section.explore
   .row
-    .column
-      %form#search{:action => "http://google.com/search", :method => "get"}
-        %fieldset{:role => "search"}
-          %input{:name => "q", :type => "hidden", :value => "site:island94.org"}
-          %input.search{:name => "q", :placeholder => "Search (via Google)", :results => "0", :type => "text"}
+    %form#search{:action => "http://google.com/search", :method => "get"}
+      %fieldset{:role => "search"}
+        %input.form-control{:name => "q", :type => "hidden", :value => "site:island94.org"}
+        %input.search.form-control{:name => "q", :placeholder => "Search (via Google)", :results => "0", :type => "text"}
 
   .row
-    .medium-6.medium-push-6.columns
+    .col-md-6
       %h2 Newest articles
       %ol
         - blog.articles[0...5].each do |article|
           %li
             %a{:href => article.url}
               = article.title
-    .medium-6.medium-pull-6.columns
+    .col-md-6
       %h2 Popular articles
       %ol
         - data.popular_articles[0...5].map{|title| blog.articles.find{|a| a.title.downcase == title.downcase }}.compact.each do |article|
